--- a/env.example
+++ b/env.example
@@ -6,8 +6,9 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 # Google Gemini AI
 GOOGLE_GEMINI_API_KEY=your_gemini_api_key
 
-# eBay Developer (Optional - for auto-posting)
+# eBay Developer (Required for Market Scanner)
 EBAY_APP_ID=your_ebay_app_id
+EBAY_ENVIRONMENT=PRODUCTION
 EBAY_CLIENT_ID=your_ebay_client_id
 EBAY_CLIENT_SECRET=your_ebay_client_secret
 
