feat: expanded art niches, implemented UX Synergy, and fixed footer 404s

--- a/env.example
+++ b/env.example
@@ -23,5 +23,11 @@ PAYPAL_CLIENT_SECRET=your_paypal_client_secret
 # Cron Job Security
 CRON_SECRET=your_random_secret_string
 
+# Google Vertex AI (Cheaper than standard Gemini API)
+VERTEX_PROJECT_ID=your_project_id
+VERTEX_LOCATION=us-central1
+VERTEX_MODEL=gemini-1.5-flash
+VERTEX_API_KEY=your_vertex_api_key
+
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
