--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.3",
+    "@xenova/transformers": "^2.17.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "node-fetch": "^3.3.2",
     "openai": "^6.13.0",
     "playwright": "^1.57.0",
     "playwright-extra": "^4.3.6",
